// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Recipient should render 1`] = `
<div>
  <div
    class="flex justify-between items-center py-4 border-t border-dashed border-theme-neutral-300 "
  >
    <div
      class="flex items-center"
    >
      <div
        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gHAmvf"
        data-testid="Avatar"
      >
        <div
          class="overflow-hidden rounded-full"
        >
          <img
            alt="test"
            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
            title="test"
          />
        </div>
      </div>
      <span
        class="ml-4"
      >
        Address
      </span>
    </div>
    <div
      class="sc-AxjAm chAqZX"
      color="danger"
    >
      -88.84557 ARK
    </div>
  </div>
</div>
`;

exports[`Recipient should render without border 1`] = `
<div>
  <div
    class="flex justify-between items-center py-4 true "
  >
    <div
      class="flex items-center"
    >
      <div
        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gHAmvf"
        data-testid="Avatar"
      >
        <div
          class="overflow-hidden rounded-full"
        >
          <img
            alt="test"
            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
            title="test"
          />
        </div>
      </div>
      <span
        class="ml-4"
      >
        Address
      </span>
    </div>
    <div
      class="sc-AxjAm chAqZX"
      color="danger"
    >
      -88.84557 ARK
    </div>
  </div>
</div>
`;
